Modificado de error

--- a/Tarea 1/templates/list.html
+++ b/Tarea 1/templates/list.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veterinaria</title>
+    <title>Listado Gatitos</title>
 </head>
 <body>
-    <form >
-        <p>Nombre</p>
-        <input type="text" placeholder="Ingrese nombre">
-        <hr>
-        <p>Raza</p>
-        <input type="text" placeholder="Ingrese raza">
-        <hr>
-        <p>Edad</p>
-        <input type="number" placeholder="Ingrese Edad">
-        <hr>
-        <p>Género</p>
-        <select>
-            <option value="0">Seleccione genero</option>
-            <option value="1">Macho</option>
-            <option value="2">Hembra</option>
-        </select>
-        <hr>
-        <p>Color</p>
-        <input type="color" placeholder="Ingrese Color">
-        <hr>
-        <p>Peso</p>
-        <input type="text" placeholder="Ingrese peso">
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Raza</th>
+                <th>Edad</th>
+                <th>Genero</th>
+                <th>Color</th>
+                <th>Peso</th>
+            </tr>
+        </thead>
+        <tbody>
 
-        <hr>
+            {% for gato in gatos %}
+            <tr>
+                <td>{{gato.nombre}}</td>
+                <td>{{gato.raza}}</td>
+                <td>{{gato.edad}}</td>
+                <td>{{gato.genero}}</td>
+                <td>{{gato.color}}</td>
+                <td>{{gato.peso}}</td>
+            </tr>
+            {% endfor %}
 
-        <button>Agregrar Gato</button>
-    </form>
+        </tbody>
+    </table>
+
 </body>
 </html>
